Now the command that the system should execute to start NoteLab is placed in an array before being given to the exec() method so that the exec() method does not incorrectly tokenize the command.